--- a/sass/components/_section-customers.scss
+++ b/sass/components/_section-customers.scss
@@ -1,13 +1,13 @@
 /* ________________________________ SECTION OF CUSTOMERS________________________________ */
 
 .section-customers {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: $white-color;
 
   &__title {
     margin: 0;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-family: $main-font;
     font-style: normal;
     font-weight: 700;
@@ -19,16 +19,13 @@
   }
 
   &__list {
-    display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
     justify-content: center;
   }
   &__item {
-    width: 170px;
     height: 92px;
-    margin-right: 30px;
     padding-top: 16px;
     padding-left: 32px;
     padding-right: 32px;
@@ -46,10 +43,6 @@
       fill: $accent-color;
       border: 1px solid $accent-color;
     }
-
-    &:last-child {
-      margin-right: 0;
-    }
   }
   &__icon {
     width: 106px;
@@ -62,6 +55,58 @@
 .section-customers__item:focus .section-customers__icon {
   fill: $accent-color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: $pre-tablet) {
+  .section-customers {
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
+    &__item {
+      width: 210px;
+    }
+  }
+}
+
+@media screen and (min-width: $tablet) and (max-width: $pre-desktop) {
+  .section-customers {
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
+    &__item {
+      width: 226px;
+    }
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .section-customers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+
+    &__title {
+      margin-bottom: 50px;
+    }
+
+    &__list {
+      display: flex;
+    }
+
+    &__item {
+      width: 170px;
+      margin-right: 30px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
 }
 
 /* ________________________________ END SECTION OF CUSTOMERS________________________________ */
