--- a/sass/components/_section-work.scss
+++ b/sass/components/_section-work.scss
@@ -1,66 +1,73 @@
 /* ___________________________________SECTION OF WORK___________________________________ */
 
-.section-work {
-  padding-bottom: 94px;
-  background-color: $white-color;
-
-  &__center {
-    text-align: center;
+@media screen and (max-width: $pre-desktop) {
+  .section-work {
+    display: none;
   }
+}
 
-  &__title {
-    margin: 0;
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    color: $title-text-color;
-  }
+@media screen and (min-width: $desktop) {
+  .section-work {
+    padding-bottom: 94px;
+    background-color: $white-color;
 
-  &__list {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  &__item {
-    margin-right: 30px;
-    position: relative;
+    &__center {
+      text-align: center;
+    }
 
-    &:last-child {
-      margin-right: 0;
+    &__title {
+      margin: 0;
+      margin-bottom: 50px;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 1.17;
+      color: $title-text-color;
+    }
+
+    &__list {
+      display: flex;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+    &__item {
+      margin-right: 30px;
+      position: relative;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
-}
 
-.section-work__item:before {
-  display: inline-block;
-  position: absolute;
-  width: 370px;
-  height: 70px;
-  bottom: 0;
-  left: 0;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  font-family: $main-font;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: $white-color;
-  background: rgba(47, 48, 58, 0.8);
-}
+  .section-work__item:before {
+    display: inline-block;
+    position: absolute;
+    width: 370px;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    font-family: $main-font;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $white-color;
+    background: rgba(47, 48, 58, 0.8);
+  }
 
-.section-work__item:nth-child(1)::before {
-  content: "Десктопні додатки";
+  .section-work__item:nth-child(1)::before {
+    content: "Десктопні додатки";
+  }
+  .section-work__item:nth-child(2)::before {
+    content: "Мобільні додатки";
+  }
+  .section-work__item:nth-child(3)::before {
+    content: "Дизайнерські рішення";
+  }
 }
-.section-work__item:nth-child(2)::before {
-  content: "Мобільні додатки";
-}
-.section-work__item:nth-child(3)::before {
-  content: "Дизайнерські рішення";
-}
-
 /* ___________________________________END SECTION OF WORK___________________________________ */
