--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,7 @@
   border: none;
   background-color: rgba(0, 0, 0, 0);
   cursor: pointer;
+  z-index: 1;
 }
 .menu-button:hover, .menu-button:focus {
   fill: #2196f3;
@@ -243,14 +244,14 @@
 .menu-container {
   position: absolute;
   display: none;
-  height: 100%;
   width: 100%;
-  top: 40px;
+  top: 0;
   left: 0;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 48px;
   text-align: left;
+  background-color: #ffffff;
 }
 .menu-container.is-open {
   display: block;
@@ -1365,8 +1366,8 @@
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  min-height: 581px;
-  min-width: 528px;
+  max-height: 609px;
+  max-width: 450px;
   padding: 40px;
   margin-left: auto;
   margin-right: auto;
@@ -1447,7 +1448,7 @@
 }
 
 .form-field input {
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1533,6 +1534,12 @@
 }
 
 .form-policy label {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   cursor: pointer;
 }
 
@@ -1608,4 +1615,18 @@
 .button-submit:hover, .button-submit:focus {
   background: #188ce8;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-height: 581px;
+    min-width: 528px;
+  }
+  .form-field input {
+    width: 448px;
+  }
+  .icon-check {
+    left: 37px;
+    top: 2px;
+  }
 }/*# sourceMappingURL=main.css.map */
