--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -27,8 +27,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  min-height: 581px;
-  min-width: 528px;
+  max-height: 609px;
+  max-width: 450px;
   padding: 40px;
   margin-left: auto;
   margin-right: auto;
@@ -96,7 +96,7 @@
 }
 
 .form-field input {
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -171,6 +171,12 @@
   position: relative;
 }
 .form-policy label {
+  font-family: $main-font;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   cursor: pointer;
 }
 .url-policy {
@@ -240,5 +246,26 @@
   &:focus {
     background: #188ce8;
     cursor: pointer;
+  }
+}
+
+@media screen and (max-width: $pre-tablet) {
+}
+
+@media screen and (min-width: $tablet) and (max-width: $pre-desktop) {
+}
+
+@media screen and (min-width: $desktop) {
+  .modal {
+    min-height: 581px;
+    min-width: 528px;
+  }
+
+  .form-field input {
+    width: 448px;
+  }
+  .icon-check {
+    left: 37px;
+    top: 2px;
   }
 }
