--- a/css/main.css
+++ b/css/main.css
@@ -1177,8 +1177,8 @@
 /* _____________________________________ END OF FOOTER ___________________________________ */
 /* ________________________________________ PORTFOLIO ___________________________________ */
 .section-portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
   border-top: 1px solid #ececec;
 }
@@ -1187,20 +1187,18 @@
 }
 
 .section-filters__list {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 15px 8px;
   margin: 0;
-  margin-bottom: 50px;
   padding: 0;
 }
 
 .section-filters__item {
-  margin-right: 8px;
   list-style: none;
-}
-.section-filters__item:last-child {
-  margin-right: 0;
 }
 
 .section-filters__button {
@@ -1228,6 +1226,40 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 767px) {
+  .section-filters__list {
+    margin-bottom: 40px;
+    max-width: 326px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .section-filters__list {
+    margin-bottom: 30px;
+  }
+  .section-filters__list {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .section-filters__list {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-bottom: 50px;
+  }
+  .section-filters__item {
+    margin-right: 8px;
+  }
+  .section-filters__item:last-child {
+    margin-right: 0;
+  }
+}
 /* ______________________________________ SECTION OF PROJECT ________________________________ */
 .section-project {
   display: -webkit-box;
@@ -1235,6 +1267,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  gap: 30px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -1242,15 +1275,7 @@
   /* overflow: hidden; */
 }
 .section-project__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
   cursor: pointer;
-}
-.section-project__item:nth-child(3n) {
-  margin-right: 0;
-}
-.section-project__item:nth-last-child(-n+3) {
-  margin-bottom: 7px;
 }
 
 .section-project__item .section-project__url {
@@ -1333,6 +1358,16 @@
   color: #757575;
 }
 
+@media screen and (max-width: 767px) {
+  .section-project__img {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .section-project__img {
+    width: 354px;
+  }
+}
 /* __________________________________ END SECTION OF PROJECT _____________________________ */
 /* ______________________________________ MODAL WINDOW ________________________________ */
 .backdrop {
