--- a/sass/components/_section-portfolio.scss
+++ b/sass/components/_section-portfolio.scss
@@ -1,8 +1,8 @@
 /* ________________________________________ PORTFOLIO ___________________________________ */
 
 .section-portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: $white-color;
   border-top: 1px solid #ececec;
 
@@ -12,19 +12,15 @@
 }
 
 .section-filters__list {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px 8px;
   margin: 0;
-  margin-bottom: 50px;
   padding: 0;
 }
 
 .section-filters__item {
-  margin-right: 8px;
   list-style: none;
-
-  &:last-child {
-    margin-right: 0;
-  }
 }
 
 .section-filters__button {
@@ -51,5 +47,39 @@
     color: $white-color;
     background: $accent-color;
     cursor: pointer;
+  }
+}
+@media screen and (max-width: $pre-tablet) {
+  .section-filters__list {
+    margin-bottom: 40px;
+    max-width: 326px;
+  }
+}
+
+@media screen and (min-width: $tablet) and (max-width: $pre-desktop) {
+  .section-filters__list {
+    margin-bottom: 30px;
+  }
+  .section-filters__list {
+    display: inline-flex;
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .section-portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .section-filters__list {
+    display: inline-flex;
+    margin-bottom: 50px;
+  }
+
+  .section-filters__item {
+    margin-right: 8px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
