--- a/css/main.css
+++ b/css/main.css
@@ -23,9 +23,12 @@
   }
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 /* ________________________________HEADER_____________________________________ */
 .header {
-  position: relative;
   margin: 0 auto;
   padding: 0;
   background: #ffffff;
@@ -216,7 +219,7 @@
   border: none;
   background-color: rgba(0, 0, 0, 0);
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 }
 .menu-button:hover, .menu-button:focus {
   fill: #2196f3;
@@ -242,9 +245,10 @@
 }
 
 .menu-container {
-  position: absolute;
+  position: fixed;
   display: none;
   width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   padding-top: 40px;
@@ -252,6 +256,7 @@
   padding-left: 48px;
   text-align: left;
   background-color: #ffffff;
+  z-index: 1;
 }
 .menu-container.is-open {
   display: block;
@@ -1383,6 +1388,8 @@
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2.5;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -1414,6 +1421,7 @@
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 3;
 }
 
 .close-form {
@@ -1661,6 +1669,10 @@
     width: 448px;
   }
   .icon-check {
+    left: 37px;
+    top: 2px;
+  }
+  .checkbox:checked + .icon-check {
     left: 37px;
     top: 2px;
   }
