--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -12,6 +12,8 @@
   border-radius: 4px;
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2.5;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -37,6 +39,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 3;
 }
 
 .close-form {
@@ -265,6 +268,11 @@
     width: 448px;
   }
   .icon-check {
+    left: 37px;
+    top: 2px;
+  }
+
+  .checkbox:checked + .icon-check {
     left: 37px;
     top: 2px;
   }
