--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -194,6 +194,9 @@
 }
 
 @media screen and (max-width: $pre-tablet) {
+  .footer {
+    min-width: 450px;
+  }
   .footer-block {
     display: block;
   }
