--- a/sass/components/_section-project.scss
+++ b/sass/components/_section-project.scss
@@ -22,7 +22,6 @@
 .section-project__wrapper {
   position: relative;
   overflow: hidden;
-  height: 294px;
 }
 .section-project__overlay {
   position: absolute;
@@ -89,11 +88,17 @@
   .section-project__img {
     width: 450px;
   }
+  .section-project__overlay {
+    padding: 77px 24px;
+  }
 }
 
 @media screen and (min-width: $tablet) and (max-width: $pre-desktop) {
   .section-project__img {
     width: 354px;
+  }
+  .section-project__overlay {
+    padding: 49px 24px 77px;
   }
 }
 
