--- a/css/main.css
+++ b/css/main.css
@@ -251,22 +251,24 @@ body.modal-open {
   text-align: left;
   background-color: #ffffff;
   z-index: 1;
-  overflow-y: scroll;
 }
 .menu-container.is-open {
   display: block;
 }
 .menu-container__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
-  margin-bottom: 306px;
   padding: 0;
   list-style: none;
 }
 .menu-container__item {
   margin-bottom: 32px;
-}
-.menu-container__item:last-child {
-  margin-bottom: 0;
 }
 .menu-container__link {
   text-decoration: none;
@@ -286,16 +288,19 @@ body.modal-open {
 }
 
 .menu-contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
-  margin-bottom: 64px;
   padding: 0;
   list-style: none;
 }
 .menu-contacts__item {
   margin-bottom: 32px;
-}
-.menu-contacts__item:last-child {
-  margin-bottom: 0;
 }
 .menu-contacts__link {
   text-decoration: none;
@@ -416,7 +421,7 @@ body.modal-open {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-480.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    min-width: 450px;
+    min-width: 480px;
   }
   .section-cap__title {
     max-width: 360px;
@@ -468,35 +473,20 @@ body.modal-open {
   padding: 0;
   list-style: none;
 }
-.section-features__item:before {
-  display: block;
-  content: "";
+.section-features__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 120px;
   margin-bottom: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-radius: 4px;
   background: #f5f4fa;
-}
-.section-features__item:nth-child(1)::before {
-  background-image: url(../images/svg1.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.section-features__item:nth-child(2)::before {
-  background-image: url(../images/svg2.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.section-features__item:nth-child(3)::before {
-  background-image: url(../images/svg3.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.section-features__item:nth-child(4)::before {
-  background-image: url(../images/svg4.svg);
-  background-repeat: no-repeat;
-  background-position: center;
 }
 .section-features__item {
   margin-right: 30px;
@@ -741,6 +731,9 @@ body.modal-open {
 }
 
 @media screen and (max-width: 767px) {
+  .section-team {
+    min-width: 480px;
+  }
   .section-team__list {
     display: block;
   }
@@ -1102,7 +1095,7 @@ body.modal-open {
 
 @media screen and (max-width: 767px) {
   .footer {
-    min-width: 450px;
+    min-width: 480px;
   }
   .footer-block {
     display: block;
@@ -1285,6 +1278,8 @@ body.modal-open {
 .section-project__item .section-project__url {
   text-decoration: none;
   color: inherit;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .section-project__wrapper {
@@ -1327,6 +1322,8 @@ body.modal-open {
 .section-project__url:focus .section-project__overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .section-project__aside {
