--- a/sass/components/_section-project.scss
+++ b/sass/components/_section-project.scss
@@ -18,6 +18,8 @@
 .section-project__item .section-project__url {
   text-decoration: none;
   color: inherit;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .section-project__wrapper {
   position: relative;
@@ -52,6 +54,8 @@
 .section-project__url:hover .section-project__overlay,
 .section-project__url:focus .section-project__overlay {
   transform: translateY(0);
+  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
+    1px 4px 6px rgb(0 0 0 / 16%);
 }
 
 .section-project__aside {
