--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,16 @@ body.modal-open {
   z-index: 1;
 }
 .menu-container.is-open {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .menu-container__list {
   display: -webkit-box;
@@ -301,6 +310,9 @@ body.modal-open {
 }
 .menu-contacts__item {
   margin-bottom: 32px;
+}
+.menu-contacts__item:last-child {
+  margin-bottom: 64px;
 }
 .menu-contacts__link {
   text-decoration: none;
