--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -180,6 +180,7 @@
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  color: $primary-text-color;
   cursor: pointer;
 }
 .url-policy {
